adding save outfits

--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -22,115 +22,122 @@
         <br>
         Low
         <span id="loTemp"></span>
-        </span>
+      </span>
       <br>
       <!-- GOOGLE SEARCH PAGE -->
-      </div>
-      <div class="form-group form-inline">
-    <input type="text" name="user_location" value="" placeholder=" e.g., San Francisco, CA or 94101" autofocus="true" size="30" id="user_location">
+    </div>
+    <div class="form-group form-inline">
+      <input type="text" name="user_location" value="" placeholder=" e.g., San Francisco, CA or 94101" autofocus="true" size="30" id="user_location">
+    </div>
+    <button class="btn btn-primary" id="changeLoc">Change</button>
   </div>
-  <button class="btn btn-primary" id="changeLoc">Change</button>
-      </div>
-      </div>
+</div>
 
 <div class="col-md-6 col-lg-6 col-sm-6">
-      <!-- picked style -->
-    <h2>Picked Style</h2>
-    <br>
-    <br>
-      <div class ="rowstyle1">
-       <div id="selectedDress"></div>
-        <div id="selectedTop" class="col-md-6"></div>
-         <div id="selectedBottom" class="col-md-6"></div>
-           </div>
-           <hr class="page-divider">
-           <br>
-        <div class ="row" id="style2">
-          <div id="selectedShoes" class="col-md-3"></div>
-          <div id="selectedAccessory1" class="col-md-3"></div>
-          <div id="selectedAccessory2" class="col-md-3"></div>
-         </div>
-      </div>
+  <!-- picked style -->
+  <h2>Picked Style</h2>
+  <br>
+  <br>
+  <div class ="rowstyle1">
+   <div id="selectedDress"></div>
+   <div id="selectedTop" class="col-md-6"></div>
+   <div id="selectedBottom" class="col-md-6"></div>
+  </div>
+   <hr class="page-divider">
+   <br>
+   <div class ="row" id="style2">
+    <div id="selectedShoes" class="col-md-3"></div>
+    <div id="selectedAccessory1" class="col-md-3"></div>
+    <div id="selectedAccessory2" class="col-md-3"></div>
+  </div>
+  <div class="text-center">
+    <%= form_for(@user, url: styles_path(@user)) do |f|  %>
+    <%= f.hidden_field :top_url, value: "" %>
+    <%= f.hidden_field :top, value: "" %>
+    <%= f.submit("Save outfit", class: "btn btn-primary save_outfit") %>
+    <% end %>
+  </div>
+</div>
 
 
-  <!-- suggested style below -->
-  <div class=" col-sm-6 col-md-6 col-lg-6" id="suggestedStyle">
-    <h2>Suggested styles</h2>
-    <div id="gender"><%= @user.sex %></div>
-    <h5>Create your look!</h5>
+<!-- suggested style below -->
+<div class=" col-sm-6 col-md-6 col-lg-6" id="suggestedStyle">
+  <h2>Suggested styles</h2>
+  <div id="gender"><%= @user.sex %></div>
+  <h5>Create your look!</h5>
 
   <% if @user.sex =='M' %>
-    <br>
-<div class="drop-down"><!--  top accordian  -->
-  <div class="panel-group" id="accordion">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">TOPS</a>
-        </h4>
+  <br>
+  <div class="drop-down"><!--  top accordian  -->
+    <div class="panel-group" id="accordion">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4 class="panel-title">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">TOPS</a>
+          </h4>
         </div> <!-- end of dress collapse up -->
         <div id="collapseOne" class="panel-collapse collapse in">
          <div class="panel-body" id="top">
-                </div>
-            </div>
-        </div> <!-- end of top collapse down -->
-<br>
+         </div>
+       </div>
+     </div> <!-- end of top collapse down -->
+     <br>
 
 
 
-<div class="panel panel-default"> <!-- bottoms collapse -->
-  <div class="panel-heading">
-    <h4 class="panel-title">
-    <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Bottoms</a>
-    </h4>
-  </div>
-    <div id="collapseTwo" class="panel-collapse collapse">
-      <div class="panel-body" id="bottom">
+     <div class="panel panel-default"> <!-- bottoms collapse -->
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Bottoms</a>
+        </h4>
       </div>
-    </div>
-</div> <!-- end bottoms collapse -->
-<br>
-<div class="panel panel-default"> <!-- Shoes collapse -->
-  <div class="panel-heading">
-    <h4 class="panel-title">
-    <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Shoes</a>
-    </h4>
-  </div>
-    <div id="collapseThree" class="panel-collapse collapse">
-      <div class="panel-body" id="shoes">
+      <div id="collapseTwo" class="panel-collapse collapse">
+        <div class="panel-body" id="bottom">
+        </div>
       </div>
-    </div>
-</div> <!-- end Shoes collapse -->
-<br>
-<div class="panel panel-default"> <!-- Accessory collapse -->
-  <div class="panel-heading">
-    <h4 class="panel-title">
-    <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Accessory</a>
-    </h4>
-  </div>
-    <div id="collapseFour" class="panel-collapse collapse">
-      <div class="panel-body" id="accessory1">
+    </div> <!-- end bottoms collapse -->
+    <br>
+    <div class="panel panel-default"> <!-- Shoes collapse -->
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Shoes</a>
+        </h4>
       </div>
-    </div>
-</div> <!-- end Accessory collapse -->
-<br>
-<div class="panel panel-default"> <!-- Accessory 2 collapse -->
-  <div class="panel-heading">
-    <h4 class="panel-title">
-    <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">Accessory #2</a>
-    </h4>
-  </div>
-    <div id="collapseFive" class="panel-collapse collapse">
-      <div class="panel-body" id="accessory2">
+      <div id="collapseThree" class="panel-collapse collapse">
+        <div class="panel-body" id="shoes">
+        </div>
       </div>
-    </div>
-</div> <!-- end Accessory 2 collapse -->
-  <% end %>
+    </div> <!-- end Shoes collapse -->
+    <br>
+    <div class="panel panel-default"> <!-- Accessory collapse -->
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Accessory</a>
+        </h4>
+      </div>
+      <div id="collapseFour" class="panel-collapse collapse">
+        <div class="panel-body" id="accessory1">
+        </div>
+      </div>
+    </div> <!-- end Accessory collapse -->
+    <br>
+    <div class="panel panel-default"> <!-- Accessory 2 collapse -->
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">Accessory #2</a>
+        </h4>
+      </div>
+      <div id="collapseFive" class="panel-collapse collapse">
+        <div class="panel-body" id="accessory2">
+        </div>
+      </div>
+    </div> <!-- end Accessory 2 collapse -->
+    <% end %>
   </div>
-  </div>
+</div>
 
 <% if @user.sex =='F' %>
-    <br>
+<br>
 <div class="drop-down"><!--  dress accordian  -->
   <div class="panel-group" id="accordion">
     <div class="panel panel-default">
@@ -138,76 +145,76 @@
         <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Dresses</a>
         </h4>
-        </div> <!-- end of dress collapse up -->
-        <div id="collapseOne" class="panel-collapse collapse in">
-         <div class="panel-body" id="dress">
-                </div>
-            </div>
-        </div> <!-- end of dress collapse down -->
-            <br>
-<div class="panel panel-default"> <!-- tops collapse -->
-  <div class="panel-heading">
-    <h4 class="panel-title">
-    <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">TOPS</a>
-    </h4>
-  </div>
+      </div> <!-- end of dress collapse up -->
+      <div id="collapseOne" class="panel-collapse collapse in">
+       <div class="panel-body" id="dress">
+       </div>
+     </div>
+   </div> <!-- end of dress collapse down -->
+   <br>
+   <div class="panel panel-default"> <!-- tops collapse -->
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">TOPS</a>
+      </h4>
+    </div>
     <div id="collapseTwo" class="panel-collapse collapse">
       <div class="panel-body" id="top">
       </div>
     </div>
-</div> <!-- end tops collapse -->
-<br>
-<div class="panel panel-default"> <!-- bottoms collapse -->
-  <div class="panel-heading">
-    <h4 class="panel-title">
-    <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Bottoms</a>
-    </h4>
-  </div>
+  </div> <!-- end tops collapse -->
+  <br>
+  <div class="panel panel-default"> <!-- bottoms collapse -->
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Bottoms</a>
+      </h4>
+    </div>
     <div id="collapseThree" class="panel-collapse collapse">
       <div class="panel-body" id="bottom">
       </div>
     </div>
-</div> <!-- end bottoms collapse -->
-<br>
-<div class="panel panel-default"> <!-- Shoes collapse -->
-  <div class="panel-heading">
-    <h4 class="panel-title">
-    <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Shoes</a>
-    </h4>
-  </div>
+  </div> <!-- end bottoms collapse -->
+  <br>
+  <div class="panel panel-default"> <!-- Shoes collapse -->
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Shoes</a>
+      </h4>
+    </div>
     <div id="collapseFour" class="panel-collapse collapse">
       <div class="panel-body" id="shoes">
       </div>
     </div>
-</div> <!-- end Shoes collapse -->
-<br>
-<div class="panel panel-default"> <!-- Accessory collapse -->
-  <div class="panel-heading">
-    <h4 class="panel-title">
-    <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">Accessory</a>
-    </h4>
-  </div>
+  </div> <!-- end Shoes collapse -->
+  <br>
+  <div class="panel panel-default"> <!-- Accessory collapse -->
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">Accessory</a>
+      </h4>
+    </div>
     <div id="collapseFive" class="panel-collapse collapse">
       <div class="panel-body" id="accessory1">
       </div>
     </div>
-</div> <!-- end Accessory collapse -->
-<br>
-<div class="panel panel-default"> <!-- Accessory 2 collapse -->
-  <div class="panel-heading">
-    <h4 class="panel-title">
-    <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">Accessory #2</a>
-    </h4>
-  </div>
+  </div> <!-- end Accessory collapse -->
+  <br>
+  <div class="panel panel-default"> <!-- Accessory 2 collapse -->
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">Accessory #2</a>
+      </h4>
+    </div>
     <div id="collapseFive" class="panel-collapse collapse">
       <div class="panel-body" id="accessory2">
       </div>
     </div>
-</div> <!-- end Accessory 2 collapse -->
+  </div> <!-- end Accessory 2 collapse -->
   <% end %>
-  </div>
-  </div>
-  </div>
+</div>
+</div>
+</div>
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
 
 
