Shoes algorithm finished

--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -202,10 +202,10 @@
   <div class="panel panel-default"> <!-- Accessory 2 collapse -->
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">Accessory #2</a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix">Accessory #2</a>
       </h4>
     </div>
-    <div id="collapseFive" class="panel-collapse collapse">
+    <div id="collapseSix" class="panel-collapse collapse">
       <div class="panel-body" id="accessory2">
       </div>
     </div>
