Women's Accessory Algorithm completed

--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -113,7 +113,7 @@
     <div class="panel panel-default"> <!-- Accessory collapse -->
       <div class="panel-heading">
         <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Accessory</a>
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Watches</a>
         </h4>
       </div>
       <div id="collapseFour" class="panel-collapse collapse">
@@ -125,7 +125,7 @@
     <div class="panel panel-default"> <!-- Accessory 2 collapse -->
       <div class="panel-heading">
         <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">Accessory #2</a>
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">Accessory</a>
         </h4>
       </div>
       <div id="collapseFive" class="panel-collapse collapse">
@@ -190,7 +190,7 @@
   <div class="panel panel-default"> <!-- Accessory collapse -->
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">Accessory</a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">Handbags</a>
       </h4>
     </div>
     <div id="collapseFive" class="panel-collapse collapse">
@@ -202,7 +202,7 @@
   <div class="panel panel-default"> <!-- Accessory 2 collapse -->
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix">Accessory #2</a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix">Accessory</a>
       </h4>
     </div>
     <div id="collapseSix" class="panel-collapse collapse">
