--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -225,7 +225,15 @@ input{
     text-align: center;
 
  }
+ 
+#saveStyle {
+  display: none;
+  float: right;
+  margin-right:300px;
+}
 
-
+.show_outfits{
+  display: none;
+}
 
 
