--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -27,7 +27,7 @@
             </ul>
           </div>
         <ul class="nav navbar-nav navbar-right">
-         <li><%= link_to "Outfits", outfits_index_path, method: :delete %></li>
+         <li><%= link_to "Outfits", outfits_path, method: :delete %></li>
 
         <li><%= link_to "Style Page", styles_path %></li>
                <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
