--- a/app/views/outfits/index.html.erb
+++ b/app/views/outfits/index.html.erb
@@ -1,22 +1,34 @@
 <h2>Styled Outfits</h2>
  <br>  <br>
-<div class="container">
+<div class="container" id="outfits">
 <div class="row">
 <% if @outfits.any? %>
 <% @outfits.each do |outfit| %>
 <div class="col-lg-6 ">
 <div class="thumbnail">
  <br>  <br>
- <h4>
+ <div class="caption"><h4>
   <% env_data = outfit.env_data %>
-  <%= env_data.date %> || <%= env_data.location %> ||  <%= env_data.weather_temp %> || <%= env_data.weather_state %> <%= link_to "Remove", outfits_delete_path(outfit), method: :delete, class: "btn btn-default" %></h4>
+  <%= env_data.date.to_formatted_s(:long) %> || <%= env_data.location %>, <%= env_data.weather_state %> ||  <%= env_data.weather_temp %> &#8457  <%= link_to "Remove", outfits_delete_path(outfit), method: :delete, class: "btn btn-default" %></h4> </div>
   <br>
+<% if outfit.top_url != "" %>
 <!-- <%= outfit.top %> -  --><img src="<%= outfit.top_url %>" alt="">
+<% end %>
+<% if outfit.dress_url != "" %>
 <!--   <%= outfit.dress %> -  --><img src="<%= outfit.dress_url %>" alt="">
+<% end %>
+<% if outfit.bottom_url != "" %>
 <!--   <%= outfit.bottom %> -  --><img src="<%= outfit.bottom_url %>" alt="">
+<% end %>
+<% if outfit.shoe_url != "" %>
 <!--   <%= outfit.shoe %> -  --><img src="<%= outfit.shoe_url %>" alt="">
+<% end  %>
+<% if outfit.access_1_url != "" %>
 <!-- <%= outfit.access_1 %> -  --><img src="<%= outfit.access_1_url %>" alt="">
+<% end %>
+<% if outfit.access_2_url != "" %>
 <!-- <%= outfit.access_2 %> -  --><img src="<%= outfit.access_2_url %>" alt="">
+<% end %>
 <br><br>
 </a>
 </div>
