--- a/app/views/outfits/index.html.erb
+++ b/app/views/outfits/index.html.erb
@@ -1,27 +1,47 @@
 <h2>Styled Outfits</h2>
- <br>  <br>
-<div class="container">
-<div class="row">
-<% if @outfits.any? %>
-<% @outfits.each do |outfit| %>
-<div class="col-lg-6 ">
-<div class="thumbnail">
- <br>  <br>
- <h4>
-  <% env_data = outfit.env_data %>
-  <%= env_data.date %> || <%= env_data.location %> ||  <%= env_data.weather_temp %> || <%= env_data.weather_state %> <%= link_to "Remove", outfits_delete_path(outfit), method: :delete, class: "btn btn-default" %></h4>
-  <br>
-<!-- <%= outfit.top %> -  --><img src="<%= outfit.top_url %>" alt="">
-<!--   <%= outfit.dress %> -  --><img src="<%= outfit.dress_url %>" alt="">
-<!--   <%= outfit.bottom %> -  --><img src="<%= outfit.bottom_url %>" alt="">
-<!--   <%= outfit.shoe %> -  --><img src="<%= outfit.shoe_url %>" alt="">
-<!-- <%= outfit.access_1 %> -  --><img src="<%= outfit.access_1_url %>" alt="">
-<!-- <%= outfit.access_2 %> -  --><img src="<%= outfit.access_2_url %>" alt="">
 <br><br>
-</a>
+<div class="container">
+  <div class="row">
+    <% if @outfits.any? %>
+    <% @outfits.each do |outfit| %>
+    <div class="col-lg-6 ">
+      <div class="thumbnail" id="showModal">
+       <h4>
+        <% env_data = outfit.env_data %>
+        <%= env_data.date %> || <%= env_data.location %> ||  <%= env_data.weather_temp %> || <%= env_data.weather_state %> <%= link_to "See only this one", outfit_path(outfit), class: "btn btn-default" %><%= link_to "Remove", outfits_delete_path(outfit), method: :delete, class: "btn btn-default" %> </h4>
+        <br>
+        <!-- <%= outfit.top %> -  --><img src="<%= outfit.top_url %>" alt="">
+        <!--   <%= outfit.dress %> -  --><img src="<%= outfit.dress_url %>" alt="">
+        <!--   <%= outfit.bottom %> -  --><img src="<%= outfit.bottom_url %>" alt="">
+        <!--   <%= outfit.shoe %> -  --><img src="<%= outfit.shoe_url %>" alt="">
+        <!-- <%= outfit.access_1 %> -  --><img src="<%= outfit.access_1_url %>" alt="">
+        <!-- <%= outfit.access_2 %> -  --><img src="<%= outfit.access_2_url %>" alt="">
+      </div>
+    </div>
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+  Show this one
+</button>
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel"><%= env_data.date %></h4>
+      </div>
+      <div class="modal-body">
+        <div></div>
+        <!-- http://api.shopstyle.com/api/v2/products/359131344?pid=YOUR_API_KEY -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
 </div>
+    <% end %>
+    <% end %>    
+  </div>
 </div>
-<% end %>
-<% end %>
-</div>
-</div>
+
