--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -158,6 +158,10 @@ margin-bottom: 0;
 .carousel-control.left, .carousel-control.right {
     background-image: none
 }
+div#carousel-example-generic.carousel.slide{
+  width: 1280px;
+  margin-left: -56px;
+}
 .navbar-fixed-top {
 top: 0;
 /*border-width: 0 0 0px;*/
@@ -244,8 +248,6 @@ margin-left: 30px;
 
 /*flash*/
 div.alert.alert-notice{
-  width: 1400px;
-  margin-left: 150px;
   position: absolute;
   z-index: 1;
 }
