--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -124,7 +124,7 @@ height: 25px;
 .navbar {
   border:none;
 }
-.container-fluid {
+nav.navbar.navbar-default>.container-fluid {
 background-color: black;
 height: 50px;
 }
