--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -305,3 +305,51 @@ div#outfits.container{
   width: 1000px;
 }
 
+/*MODAL*/
+div.modalTop>p{
+text-transform: uppercase;
+letter-spacing: 0.07em;
+font-size: 9px;
+margin-bottom: 0px;
+}
+
+div.modalDress>p{
+text-transform: uppercase;
+letter-spacing: 0.07em;
+font-size: 9px;
+margin-bottom: 0px;
+}
+div.modalBottom>p{
+text-transform: uppercase;
+letter-spacing: 0.07em;
+font-size: 9px;
+margin-bottom: 0px;
+}
+div.modalShoe>p{
+text-transform: uppercase;
+letter-spacing: 0.07em;
+font-size: 9px;
+margin-bottom: 0px;
+}
+div.modalAccess1>p{
+text-transform: uppercase;
+letter-spacing: 0.07em;
+font-size: 9px;
+margin-bottom: 0px;
+}
+div.modalAccess2>p{
+text-transform: uppercase;
+letter-spacing: 0.07em;
+font-size: 9px;
+margin-bottom: 0px;
+}
+
+.container-fluid>.row{
+  margin-bottom: 20px;
+}
+.modal-title{
+font-size: 1.20rem;
+  letter-spacing: 0.10em;
+  font-weight: 900;
+}
+
