--- a/app/views/outfits/index.html.erb
+++ b/app/views/outfits/index.html.erb
@@ -36,14 +36,14 @@
         </div>
 
        </div>
- 
+
         <!-- MODAL STARTS -->
           <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="myModalLabel"><%= env_data.date %></h4>
+                  <h4 class="modal-title" id="myModalLabel"><%= env_data.date.to_formatted_s(:long) %> || <%= env_data.location %>, <%= env_data.weather_state %> ||  <%= env_data.weather_temp %> &#8457 </h4>
                 </div>
                 <div class="modal-body">
                   <div class="container-fluid">
@@ -56,35 +56,35 @@
                        <% if outfit.dress_url != "" %>
                         <div class="modalDress" data-dressid="<%= outfit.dress %>"></div>
                         <!-- <span class="modalDress" data-dressid="<%= outfit.dress %>"></span> -->
-                       <% end %>                        
+                       <% end %>
                       </div>
                       <div class="col-md-6">
                        <% if outfit.bottom_url != "" %>
                         <div class="modalBottom" data-bottomid="<%= outfit.bottom %>"></div>
                         <!-- <span class="modalBottom" data-bottomid="<%= outfit.bottom %>"></span> -->
-                       <% end %>                        
+                       <% end %>
                       </div>
-                    </div>  
+                    </div>
                     <div class="row">
                       <div class="col-md-4">
                        <% if outfit.shoe_url != "" %>
                         <div class="modalShoe" data-shoeid="<%= outfit.shoe %>"></div>
                         <!-- <span class="modalShoe" data-shoeid="<%= outfit.shoe %>"></span> -->
-                       <% end  %>                        
+                       <% end  %>
                       </div>
                       <div class="col-md-4">
                        <% if outfit.access_1_url != "" %>
                         <div class="modalAccess1" data-access_1id="<%= outfit.access_1 %>"></div>
                         <!-- <span class="modalAccess1" data-access_1id="<%= outfit.access_1 %>"></span> -->
-                       <% end %>                        
+                       <% end %>
                       </div>
                       <% if outfit.access_2_url != "" %>
                       <div class="col-md-4">
-                       
+
                         <div class="modalAccess2" data-access_2id="<%= outfit.access_2 %>"></div>
-                        <!-- <span class="modalAccess2" data-access_2id="<%= outfit.access_2 %>"></span> -->                    
+                        <!-- <span class="modalAccess2" data-access_2id="<%= outfit.access_2 %>"></span> -->
                       </div>
-                       <% end %>                      
+                       <% end %>
                     </div>
                   </div> <!--end of container fluid-->
                 </div>
@@ -94,7 +94,7 @@
               </div>
             </div>
           </div>
-        <!-- MODAL Ends -->   
+        <!-- MODAL Ends -->
 
 
 
