--- a/app/views/outfits/index.html.erb
+++ b/app/views/outfits/index.html.erb
@@ -103,3 +103,4 @@
      <% end %>
    </div>
  </div>
+ <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
