--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -251,6 +251,8 @@ margin-left: 30px;
 div.alert.alert-notice{
   position: absolute;
   z-index: 1;
+  width: 1160px;
+
 }
 input{
   margin-top: 10px;
@@ -278,7 +280,7 @@ input{
     border-color: #d6e9c6;
     color: #468847;
     text-align: center;
-    list-style-type: none;
+
  }
 
 .alert-notice {
