--- a/app/views/outfits/index.html.erb
+++ b/app/views/outfits/index.html.erb
@@ -49,7 +49,9 @@
                   <div class="container-fluid">
                     <div class="row">
                       <div class="col-md-6">
+                      outfit.top_url <%= outfit.top_url %>
                        <% if outfit.top_url != "" %>
+                       xxxx
                         <div class="modalTop" data-topid="<%= outfit.top %>"></div>
                         <!-- <span class="modalTop" data-topid="<%= outfit.top %>"></span> -->
                        <% end %>
@@ -85,6 +87,7 @@
                         <!-- <span class="modalAccess2" data-access_2id="<%= outfit.access_2 %>"></span> -->
                       </div>
                        <% end %>
+                       TEST
                     </div>
                   </div> <!--end of container fluid-->
                 </div>
