adding temp msg on modal

--- a/app/views/outfits/index.html.erb
+++ b/app/views/outfits/index.html.erb
@@ -47,11 +47,10 @@
                 </div>
                 <div class="modal-body">
                   <div class="container-fluid">
+                  THIS IS CURRENTLY NOT WORKING. <br><br> PLEASE COME BACK LATER. 
                     <div class="row">
                       <div class="col-md-6">
-                      outfit.top_url <%= outfit.top_url %>
                        <% if outfit.top_url != "" %>
-                       xxxx
                         <div class="modalTop" data-topid="<%= outfit.top %>"></div>
                         <!-- <span class="modalTop" data-topid="<%= outfit.top %>"></span> -->
                        <% end %>
@@ -87,7 +86,6 @@
                         <!-- <span class="modalAccess2" data-access_2id="<%= outfit.access_2 %>"></span> -->
                       </div>
                        <% end %>
-                       TEST
                     </div>
                   </div> <!--end of container fluid-->
                 </div>
