--- a/app/views/outfits/index.html.erb
+++ b/app/views/outfits/index.html.erb
@@ -10,30 +10,42 @@
         <div class="caption"><h4>
          <% env_data = outfit.env_data %>
          <%= env_data.date.to_formatted_s(:long) %> || <%= env_data.location %>, <%= env_data.weather_state %> ||  <%= env_data.weather_temp %> &#8457  <%= link_to "Remove", outfits_delete_path(outfit), method: :delete, class: "btn btn-default" %></h4> </div>
-         <br>
+          <br>
+          <div>
          <% if outfit.top_url != "" %>
+         <span id= "topId">
           <img src="<%= outfit.top_url %>" alt="<%= outfit.top %>">
-         <% end %>
+         <% end %></span>
          <% if outfit.dress_url != "" %>
+         <span id= "dressId">
           <img src="<%= outfit.dress_url %>" alt="<%= outfit.dress %>">
-         <% end %>
+         <% end %></span>
          <% if outfit.bottom_url != "" %>
+         <span id= "bottomId" >
           <img src="<%= outfit.bottom_url %>" alt="<%= outfit.bottom %>">
-         <% end %>
+         <% end %></span>
          <% if outfit.shoe_url != "" %>
+         <span id= "shoeId">
           <img src="<%= outfit.shoe_url %>" alt="<%= outfit.shoe %>">
          <% end  %>
+         </span>
          <% if outfit.access_1_url != "" %>
+         <span id= "access_1Id">
           <img src="<%= outfit.access_1_url %>" alt="<%= outfit.access_1 %>">
          <% end %>
+         </span>
          <% if outfit.access_2_url != "" %>
+         <span id= "access_2Id">
           <img src="<%= outfit.access_2_url %>" alt="<%= outfit.access_2 %>">
          <% end %>
-        <div>
-          <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal">
+         </span>
+
+         <br>
+        </div>
+          <button type="button" class="btn btn-default showInfo" data-toggle="modal" data-target="#myModal">
             Show Info
           </button>
-        </div>
+
 
        </div>
 
@@ -47,7 +59,6 @@
                 </div>
                 <div class="modal-body">
                   <div class="container-fluid">
-                  THIS IS CURRENTLY NOT WORKING. <br><br> PLEASE COME BACK LATER. 
                     <div class="row">
                       <div class="col-md-6">
                        <% if outfit.top_url != "" %>
