--- a/app/views/outfits/index.html.erb
+++ b/app/views/outfits/index.html.erb
@@ -13,32 +13,32 @@
           <br>
           <div>
          <% if outfit.top_url != "" %>
-         <span id= "topId">
+         <span class = "img-crop_outfits"><span id= "topId">
           <img src="<%= outfit.top_url %>" alt="<%= outfit.top %>">
-         <% end %></span>
+         <% end %></span></span>
          <% if outfit.dress_url != "" %>
-          <span id= "dressId">
+          <span class = "img-crop_outfits"> <span id= "dressId">
           <img src="<%= outfit.dress_url %>" alt="<%= outfit.dress %>">
-         <% end %></span>
+         <% end %></span></span>
          <% if outfit.bottom_url != "" %>
-         <span id= "bottomId" >
+        <span class = "img-crop_outfits"> <span id= "bottomId" >
           <img src="<%= outfit.bottom_url %>" alt="<%= outfit.bottom %>">
-         <% end %></span>
+         <% end %></span></span>
          <% if outfit.shoe_url != "" %>
-         <span id= "shoeId">
+        <span class = "img-crop_outfits"> <span id= "shoeId">
           <img src="<%= outfit.shoe_url %>" alt="<%= outfit.shoe %>">
          <% end  %>
-         </span>
+         </span></span>
          <% if outfit.access_1_url != "" %>
-         <span id= "access_1Id">
+        <span class = "img-crop_outfits"> <span id= "access_1Id">
           <img src="<%= outfit.access_1_url %>" alt="<%= outfit.access_1 %>">
          <% end %>
-         </span>
+         </span></span>
          <% if outfit.access_2_url != "" %>
-         <span id= "access_2Id">
+         <span class = "img-crop_outfits"><span id= "access_2Id">
           <img src="<%= outfit.access_2_url %>" alt="<%= outfit.access_2 %>">
          <% end %>
-         </span>
+         </span></span>
 
          <br>
         </div>
